- Fixed text alignment inheriting from property rather than declaration cascade

--- a/src/framework/mixins/_alignments.scss
+++ b/src/framework/mixins/_alignments.scss
@@ -34,7 +34,7 @@
     }
 }
 
-@mixin var-reset-text($alignment: inherit, $namespace: null) {
+@mixin var-reset-text($alignment: initial, $namespace: null) {
     @if $namespace {
         --alignment-text: #{variables.format-var("#{$namespace}.alignment.text")};
     } @else {
